Design `healthcheck` service.
